manifests/02_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: object-auditor-webhook-cfg
  namespace: webhook-example
  labels:
    app: object-auditor
webhooks:
  - name: object-auditor.agreene.me
    clientConfig:
      service:
        name: object-auditor-webhook-svc
        namespace: webhook-example
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRFNU1EVXlOekUxTkRNeU4xb1hEVEk1TURVeU5URTFORE15TjFvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBUFFVCnNheWNCRWJ3QUZqZkthSUptSU04MFBWZHVla3FoVWJabGdWNGkzdG9SMDJRVkFMdU5TUmR5VDJ5OEg2SHdsajAKRkgrQVAxUmh0bFJjcWthT1FGOEo3YlZtLzlOR3ZIK2VYL1dpM0l4b0tOam8xbmprT0RzNXFMWENtYW9BZ003VQp0Q08wOFRMS0lj [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*"]
    namespaceSelector:
      matchLabels:
        object-auditing: "enabled"
